content/vault/v2.x/content/docs/secrets/key-management/awskms.mdx
---
layout: docs
page_title: AWS KMS
description: Manage the lifecycle of keys in AWS KMS with the Key Management secrets engine plugin.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:15:43.000Z
last_modified: 2026-04-15T00:15:43.000Z
# END AUTO GENERATED METADATA
---

# AWS KMS

@include 'alerts/enterprise-and-hcp.mdx'

AWS KMS secrets engine requires [Vault Enterprise](https://www.hashicorp.com/products/vault/pricing)
with the Advanced Data Protection (ADP) module.

The Key Management secrets engine supports lifecycle management of keys in [AWS KMS](https://aws.amazon.com/kms/)
regions. This is accomplished by configuring a KMS provider resource with the `awskms` provider and
other provider-specific parameter values.

The following sections describe how to properly configure the secrets engine to enable
the functionality.

## Authentication

The Key Management secrets engine must be configured with credentials that have sufficient
permissions to manage keys in an AWS KMS region. The authentication parameters are described
in the [credentials](/vault/api-docs/secret/key-management/awskms#credentials) section of the API
documentation. The authentication parameters will be set with the following order of
precedence:

1. [KMS provider credentials](/vault/api-docs/secret/key-management/awskms#credentials)
2. Environment variables
3. Shared credentials file
4. IAM role for AWS EC2 or ECS task

The IAM principal associated with the provided credentials must have the following minimum
[AWS KMS permissions](https://docs.aws.amazon.com/kms/latest/developerguide/kms-api-permissions-reference.html):

- `kms:CreateKey`
- `kms:GetParametersForImport`
- `kms:ImportKeyMaterial`
- `kms:EnableKey`
- `kms:DisableKey`
- `kms:ScheduleKeyDeletion`
- `kms:CreateAlias`
- `kms:UpdateAlias`
- `kms:DeleteAlias`
- `kms:ListAliases`
- `kms:TagResource`

You must have the following permissions to use
[multi-region keys](#multi-region-keys):

- `kms:ReplicateKey`
- `kms:DescribeKey`

## Configuration

The following is an example of how to configure the KMS provider resource using the Vault CLI:

```shell-session
$ vault write keymgmt/kms/example-kms \
    provider="awskms" \
    key_collection="us-west-1" \
    credentials=access_key="ASIADJO3WTX6WPLJM42V" \
    credentials=secret_key="bCiYmNroLxLmPNQ47VIvjlm8mQu5oktZcQdq195w"
```

Refer to the AWS KMS [API documentation](/vault/api-docs/secret/key-management/awskms)
for a detailed description of individual configuration parameters.

## Key transfer specification

Keys are securely transferred from the secrets engine to AWS KMS regions in accordance
with the AWS KMS [Bring Your Own Key](https://docs.aws.amazon.com/kms/latest/developerguide/importing-keys.html)
specification.

## Key rotation

AWS KMS keys with imported key material are not eligible for
[automatic key rotation](https://docs.aws.amazon.com/kms/latest/developerguide/rotate-keys.html)
within AWS KMS. As such, key rotations performed by the secrets engine use the
[manual key rotation](https://docs.aws.amazon.com/kms/latest/developerguide/rotate-keys.html#rotate-keys-manually)
process. Applications should refer to the [alias](https://docs.aws.amazon.com/kms/latest/developerguide/kms-alias.html)
associated with imported keys. Aliases will always have the form: `hashicorp/<key_name>-<unix_timestamp>`.

## Multi-region keys

You can use the Key Management secrets engine to distribute keys as
[AWS KMS multi-region keys](https://docs.aws.amazon.com/kms/latest/developerguide/multi-region-keys-overview.html)
to make the same key material available in multiple AWS regions. Multi-region
keys can improve performance for applications that operate across regions by
lowering latency on cryptographic operations and helping with cross-region
disaster recovery.

Vault currently limits multi-region support to `aes256-gcm96` keys with the
`awskms` provider, and sets the primary region based on the `key_collection`
parameter on the KMS provider resource.

### Multi-region key replication

When you create a multi-region key, you must set `replica_regions` and call the `/replicate` endpoint after distributing the key:

1. Create the key with explicit replica regions. You cannot change the assigned
   regions after key creation:

  ```shell-session
  $ vault write keymgmt/key/example-key \
      type="aes256-gcm96"               \
      replica_regions="us-east-1,eu-west-1"
  ```

1. Distribute the key to the primary KMS region. Distributing the key creates a
   multi-region primary CMK in the primary region and imports the key material:

1. Call the `/replicate` endpoint to replicate the key to the regions
   set in `replica_regions` during key creation:

  ```shell-session
   $ vault write -f keymgmt/kms/example-kms/key/example-key/replicate
  ```

## Key purpose compatibility

The following table defines which key [purposes](/vault/api-docs/secret/key-management#purpose) can be used
for each key type supported by AWS KMS.

| Key Type       | Purpose                 |
| -------------- | ----------------------- |
| `aes256-gcm96` | `encrypt` and `decrypt` |

## API

The key management secrets engine has a full HTTP API. Please see the
[AWS Key Management secrets engine API](/vault/api-docs/secret/key-management/awskms) for more
details.

## Terraform

You can manage key management secret resources programmatically with the Vault Terraform provider. Refer to the Terraform Registry documentation for more details:

- [Key management secrets engine key resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/keymgmt_key)
- [Key management AWS KMS resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/keymgmt_aws_kms)
- [Key management key rotate resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/keymgmt_key_rotate)
- [Key management distribute key resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/keymgmt_distribute_key)
- [Key management replicate key resource](https://registry.terraform.io/providers/hashicorp/vault/latest/docs/resources/keymgmt_replicate_key)
